feat: friends sleep records add rswag request api and fix pagination
